# persona-website

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  schema.sql  start.sh
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_awaiting_approval_status.py  0003_add_order_quality.py  0004_add_api_cost_log.py  0005_add_order_utm_fields.py
app/: main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  catalog.py  chat.py  config.py  dev.py  media.py  orders.py  payments.py  router.py
app/core/: logging.py  security.py  settings.py
app/db/: models.py  session.py
app/schemas/: v1.py
app/scripts/: seed_plans.py
app/services/: batch_collector.py  chat_service.py  delivery.py  kie_client.py  mercadopago_client.py  meta_capi_client.py  prompt_builder.py  script_writer.py  storage.py  utmify_client.py  xai_client.py
app/workers/: batch_runner.py  queue.py
app/workflows/: WORKFLOW - LTX IMG2VID.json
tests/: conftest.py  test_composite_cache.py  test_mercadopago.py  test_security.py
