[project]
name = "persona-storefront"
version = "0.1.0"
description = "FastAPI storefront for Persona cameo-video ordering with RunPod ComfyUI batch generation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",            # alembic / sync migrations
  "alembic>=1.14",
  "redis>=5.2",
  "arq>=0.26",                        # async task queue on top of redis
  "httpx>=0.27",
  "boto3>=1.35",
  "qrcode[pil]>=8.0",
  "mercadopago>=2.2",
  "openai>=1.54",
  "argon2-cffi>=23.1",
  "pyjwt>=2.9",
  "itsdangerous>=2.2",
  "loguru>=0.7",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
